--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "task1",
   "main": "src/js/app.js",
   "scripts": {
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "author": "Zipofar",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "jest": "^24.7.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
